feat: shuffle order of following flows when one flow is deleted
